--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <script>
+      ONEPAGE_ID = "whatever42";
+      ONEPAGE_CONTAINER = "#onepage";
+    </script>
+    <script src="%PUBLIC_URL%/onepage.js"></script>
+
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <img src="https://cdn.onepage.space/eu-central-1/onepage-prod-eu/uploads/2020-11-17/CBBuNxG1k43pNBEPCU4TjhrGEGw5QZqkVDXpbpC2kRnu9hS3iB/722f1e9f-f7dc-4011-b34b-6d43ebba1498.jpg-converted.jpg" alt="">
     <div id="root"></div>
+    <div id="onepage"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
