Small refactor; Add prepareJSON method for 'getting publicURL' for pictures;

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,9 @@
     -->
 
     <script>
-      ONEPAGE_ID = "whatever42";
+      //  //const ONEPAGE_PROJECT_ID = 'AUiglKGZgmiG.json';
+      //   //const ONEPAGE_PROJECT_ID = 'Ldsk8QIQ8nTx.json';
+      ONEPAGE_ID = "AUiglKGZgmiG.json";
       ONEPAGE_CONTAINER = "#onepage";
     </script>
     <script src="%PUBLIC_URL%/onepage.js"></script>
@@ -35,7 +37,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <img src="https://cdn.onepage.space/eu-central-1/onepage-prod-eu/uploads/2020-11-17/CBBuNxG1k43pNBEPCU4TjhrGEGw5QZqkVDXpbpC2kRnu9hS3iB/722f1e9f-f7dc-4011-b34b-6d43ebba1498.jpg-converted.jpg" alt="">
     <div id="root"></div>
     <div id="onepage"></div>
     <!--
