--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
 
     <script>
-      ONEPAGE_ID = "AUiglKGZgmiG.json";
+      ONEPAGE_ID = "YEgYggA7NWje.json";
       ONEPAGE_CONTAINER = "#onepage";
     </script>
     <script src="%PUBLIC_URL%/onepage.js"></script>
