--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <script>
-      ONEPAGE_ID = "YEgYggA7NWje.json";
-      ONEPAGE_CONTAINER = "#onepage";
-    </script>
+<!--    <script>-->
+<!--      ONEPAGE_ID = "YEgYggA7NWje.json";-->
+<!--      ONEPAGE_CONTAINER = "#onepage";-->
+<!--    </script>-->
     <script src="%PUBLIC_URL%/onepage.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -113,5 +113,11 @@
   To begin the development, run `npm start` or `yarn start`.
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
+
+<script>
+  OnePage.init({PICTURE_CDN: 'cnd.onepage.com'});
+  OnePage.render("YEgYggA7NWje.json", "#onepage");
+</script>
+
 </body>
 </html>
