Add prefix to css styles; Remove console logs;

--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
 -->
 
 <script>
-  OnePage.init({PICTURE_CDN: 'cnd.onepage.com'});
+  // OnePage.init({PICTURE_CDN: 'cnd.onepage.com'});
   OnePage.render("YEgYggA7NWje.json", "#onepage");
 </script>
 
