--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
             crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
     <title>Onepage.space plugin page</title>
 </head>
 <body>
@@ -108,9 +109,17 @@
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
 
+
+
+
+<!--
+OnePage integration plugin;
+-->
 <script>
-  // OnePage.init({PICTURE_CDN: 'cnd.onepage.com'});
-  OnePage.render("YEgYggA7NWje.json", "#onepage");
+  $( document ).ready(function() {
+    OnePage.init({CDN_HOST: './'});
+    OnePage.render("YEgYggA7NWje.json", "#onepage");
+  });
 </script>
 
 </body>
