--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
             name="description"
             content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,7 +22,7 @@
     </style>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
 
-    <script src="%PUBLIC_URL%/onepage.js"></script>
+    <script src="%PUBLIC_URL%/onepage.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
