Add new JSON fixture data; Fix linter warning; Update readme file;

--- a/public/index.html
+++ b/public/index.html
@@ -98,23 +98,12 @@
 </div>
 
 <!--
-  This HTML file is a template.
-  If you open it directly in the browser, you will see an empty page.
-
-  You can add webfonts, meta tags, or analytics to this file.
-  The build step will place the bundled scripts into the <body> tag.
-
-  To begin the development, run `npm start` or `yarn start`.
-  To create a production bundle, use `npm run build` or `yarn build`.
--->
-
-<!--
 OnePage integration plugin;
 -->
 <script>
   $( document ).ready(function() {
     OnePage.init({CDN_HOST: './'});
-    OnePage.render("YEgYggA7NWje.json", "#onepage");
+    OnePage.render("AS5JucOBGlT5.json", "#onepage");
   });
 </script>
 
