Add one page link

--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@ OnePage integration plugin;
 <script>
   $( document ).ready(function() {
     OnePage.init({CDN_HOST: './'});
-    OnePage.render("AS5JucOBGlT5.json", "#onepage");
+    OnePage.render("AyzoGrk3zh7x.json", "#onepage");
   });
 </script>
 
